# Mentoring

./: CMakeLists.txt  main.cpp
inc/beings/: being.h
inc/beings/adventurer/: adventurer.h
inc/map/: map.h  tile.h
inc/tui/: plane_builder.h  render_plane.h  renderer.h  tui.h
inc/world_runner/: world_runner.h
src/: main.cpp
src/beings/adventurer/: adventurer.cpp
src/map/: map.cpp
src/tui/: renderer.cpp  tui.cpp
src/world_runner/: world_runner.cpp
